--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,2 @@
 PORT = 3000
+MONGO_URI = mongodb+srv://ejayawan22:5SC59o1yNXPtBoui@cluster0.rlvkckx.mongodb.net/stickyNoteDB?retryWrites=true&w=majority
